Revert "Repair break on mobile"
This reverts commit c25565b732cf548524b50632a01fa0e0a622685b.

--- a/css/mayday_slider.css
+++ b/css/mayday_slider.css
@@ -392,12 +392,6 @@ a:visited { color: #a0a; }
   }
 }
 
-@media (max-width: 420px) {
-#hero .counter .phase_two_details h4 {
-  font-size: 24px;
-  }
-}
-
 @media (max-width: 400px) {
   #socialBar .social {
     width: auto;
